@@ -1,4 +1,16 @@
 ===============================================================================
+Tag Creator: mlevy
+Developers:  mlevy
+Tag Date:    7 Mar 2016
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20160307
+Tag Summary: Bugfix - somewhere along the line, merging MARBL to trunk broke
+	           the ability to read ndep file via shr_stream; that is now fixed
+
+M       source/ecosys_diagnostics_mod.F90
+M       source/ecosys_driver.F90
+M       source/ecosys_mod.F90
+M       source/marbl_parms.F90
+===============================================================================
 Tag Creator: jet
 Developers:  mlevy
 Tag Date:    22 Feb 2016
